RESOLVED FIXED42280
JIT_STUB_ARGUMENT_VA_LIST is only slowing us down!
https://bugs.webkit.org/show_bug.cgi?id=42280
Summary JIT_STUB_ARGUMENT_VA_LIST is only slowing us down!
Gavin Barraclough
Reported 2010-07-14 13:03:20 PDT
Remove it!
Attachments
The patch (10.78 KB, patch)
2010-07-14 13:05 PDT, Gavin Barraclough
oliver: review+
Gavin Barraclough
Comment 1 2010-07-14 13:05:41 PDT
Created attachment 61553 [details] The patch 1% progression on !windows x86 platforms.
Oliver Hunt
Comment 2 2010-07-14 13:09:49 PDT
Comment on attachment 61553 [details] The patch r=me
Gavin Barraclough
Comment 3 2010-07-14 13:13:01 PDT
63348
WebKit Review Bot
Comment 4 2010-07-14 14:09:17 PDT
http://trac.webkit.org/changeset/63348 might have broken Qt Windows 32-bit Release
Note You need to log in before you can comment on or make changes to this bug.