https://bugs.webkit.org/show_bug.cgi?id=42280 JIT_STUB_ARGUMENT_VA_LIST is only slowing us down! Remove it!

Reviewed by Oliver Hunt.

* jit/JIT.h:
* jit/JITInlineMethods.h:
(JSC::JIT::restoreArgumentReferenceForTrampoline):
* jit/JITStubs.cpp:
* jit/JITStubs.h:
* wtf/Platform.h:



Canonical link: https://commits.webkit.org/54197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63348 268f45cc-cd09-0410-ab3c-d52691b4dbfc